--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -1,20 +1,28 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Ionic Project - Ana Santos 572456</ion-title>
+    <ion-title text-left>Ionic Project - Ana Santos 572456</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-start></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-end>
-        {{item.note}}
-      </div>
-    </button>
+    <ion-item *ngFor="let product of products" no-padding>
+      <ion-grid text-center>
+        <ion-row>
+          <ion-col col-6>
+            <p>Product ID</p>
+            <h3>{{product.PRODUCT_CD}}</h3>
+          </ion-col>
+          <ion-col col-6>
+            <p>Name</p>
+            <h3>{{product.NAME | titlecase}}</h3>
+          </ion-col>
+          <ion-col col-12>
+            <p>Type</p>
+            <h3>{{product.TYPE}}</h3>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
   </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
 </ion-content>
