--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -8,7 +8,7 @@
   <ion-list>
     <ion-item *ngFor="let product of products" no-padding>
       <ion-grid text-center>
-        <ion-row>
+        <ion-row (click)="showDetails(product)">
           <ion-col col-6>
             <p>Product ID</p>
             <h3>{{product.PRODUCT_CD}}</h3>
